// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`shapeAgentControls > is a characterization snapshot for both fill modes 1`] = `
[
  {
    "default": "facets",
    "group": "Form",
    "hint": "facets = per-face colours from the palette; surface = one tiled fill over the whole solid",
    "key": "fillMode",
    "kind": "select",
    "label": "Fill mode",
    "options": [
      "facets",
      "surface",
    ],
  },
  {
    "default": "primitive",
    "group": "Shape",
    "key": "shape.mode",
    "kind": "select",
    "label": "Mode",
    "options": [
      "primitive",
      "gem",
    ],
  },
  {
    "default": "cube",
    "group": "Shape",
    "key": "shape.primitive",
    "kind": "select",
    "label": "Primitive",
    "options": [
      "cube",
      "sphere",
      "cone",
      "cylinder",
      "prism",
      "torus",
      "icosahedron",
      "octahedron",
    ],
  },
  {
    "default": 1,
    "group": "Shape",
    "key": "shape.density",
    "kind": "slider",
    "label": "Density",
    "max": 4,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Shape",
    "key": "shape.jitter",
    "kind": "slider",
    "label": "Jitter",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 1,
    "group": "Shape",
    "key": "shape.scale",
    "kind": "slider",
    "label": "Scale",
    "max": 3,
    "min": 0.25,
    "step": 0.05,
  },
  {
    "default": "orthographic",
    "group": "Shape",
    "key": "shape.projection",
    "kind": "select",
    "label": "Projection",
    "options": [
      "orthographic",
      "perspective",
    ],
  },
  {
    "default": "analogous",
    "group": "Palette",
    "key": "palette.harmony",
    "kind": "select",
    "label": "Harmony",
    "options": [
      "monochromatic",
      "complementary",
      "split-complementary",
      "analogous",
      "accented-analogous",
      "triadic",
      "tetradic",
      "compound",
    ],
  },
  {
    "default": 287,
    "group": "Palette",
    "key": "palette.baseHue",
    "kind": "slider",
    "label": "Hue",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 57,
    "group": "Palette",
    "key": "palette.saturation",
    "kind": "slider",
    "label": "Saturation",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 47,
    "group": "Palette",
    "key": "palette.lightness",
    "kind": "slider",
    "label": "Lightness",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "prismatic",
    "group": "Palette",
    "key": "palette.coloring",
    "kind": "select",
    "label": "Coloring",
    "options": [
      "prismatic",
      "smooth",
      "faceted",
      "ombre",
      "scatter",
    ],
  },
  {
    "default": "vertical",
    "group": "Palette",
    "key": "palette.direction",
    "kind": "select",
    "label": "Direction",
    "options": [
      "vertical",
      "depth",
      "radial",
      "angular",
    ],
  },
  {
    "default": 0,
    "group": "Style",
    "key": "style.distortion",
    "kind": "slider",
    "label": "Distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "#000000",
    "group": "Style",
    "key": "style.background",
    "kind": "color",
    "label": "Background",
  },
  {
    "default": false,
    "group": "Bloom",
    "key": "post.bloom",
    "kind": "switch",
    "label": "Bloom",
  },
  {
    "default": 0.6,
    "group": "Bloom",
    "hint": "How strong the glow is",
    "key": "post.bloomStrength",
    "kind": "slider",
    "label": "Strength",
    "max": 3,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.bloom",
    },
    "step": 0.05,
  },
  {
    "default": 0.4,
    "group": "Bloom",
    "hint": "How far the glow spreads",
    "key": "post.bloomRadius",
    "kind": "slider",
    "label": "Radius",
    "max": 1,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.bloom",
    },
    "step": 0.05,
  },
  {
    "default": 0.8,
    "group": "Bloom",
    "hint": "How bright a pixel must be before it blooms",
    "key": "post.bloomThreshold",
    "kind": "slider",
    "label": "Threshold",
    "max": 1,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.bloom",
    },
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Color",
    "key": "post.color",
    "kind": "switch",
    "label": "Color",
  },
  {
    "default": 1,
    "group": "Color",
    "hint": "Overall brightness",
    "key": "post.exposure",
    "kind": "slider",
    "label": "Exposure",
    "max": 2,
    "min": 0.2,
    "showIf": {
      "equals": true,
      "key": "post.color",
    },
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Color",
    "hint": "Difference between darks and lights",
    "key": "post.contrast",
    "kind": "slider",
    "label": "Contrast",
    "max": 2,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.color",
    },
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Color",
    "hint": "How vivid the colours are",
    "key": "post.saturation",
    "kind": "slider",
    "label": "Saturation",
    "max": 2,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.color",
    },
    "step": 0.05,
  },
  {
    "default": 0,
    "group": "Color",
    "hint": "Rotates every colour around the wheel",
    "key": "post.hue",
    "kind": "slider",
    "label": "Hue",
    "max": 3.14,
    "min": -3.14,
    "showIf": {
      "equals": true,
      "key": "post.color",
    },
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Duotone",
    "key": "post.duotone",
    "kind": "switch",
    "label": "Duotone",
  },
  {
    "default": "#1a1a2e",
    "group": "Duotone",
    "hint": "Colour the darkest tones become",
    "key": "post.duotoneShadow",
    "kind": "color",
    "label": "Shadow",
    "showIf": {
      "equals": true,
      "key": "post.duotone",
    },
  },
  {
    "default": "#f5f0e8",
    "group": "Duotone",
    "hint": "Colour the brightest tones become",
    "key": "post.duotoneHighlight",
    "kind": "color",
    "label": "Highlight",
    "showIf": {
      "equals": true,
      "key": "post.duotone",
    },
  },
  {
    "default": 1,
    "group": "Duotone",
    "hint": "How much of the duotone shows through",
    "key": "post.duotoneMix",
    "kind": "slider",
    "label": "Mix",
    "max": 1,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.duotone",
    },
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Chroma",
    "key": "post.chroma",
    "kind": "switch",
    "label": "Chroma",
  },
  {
    "default": 0.25,
    "group": "Chroma",
    "hint": "Colour fringing at the edges",
    "key": "post.chromaAmount",
    "kind": "slider",
    "label": "Amount",
    "max": 1.5,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.chroma",
    },
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Blur",
    "key": "post.blur",
    "kind": "switch",
    "label": "Blur",
  },
  {
    "default": 0.01,
    "group": "Blur",
    "hint": "Soft bokeh-style blur",
    "key": "post.blurAmount",
    "kind": "slider",
    "label": "Amount",
    "max": 0.04,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.blur",
    },
    "step": 0.002,
  },
  {
    "default": false,
    "group": "Film",
    "key": "post.film",
    "kind": "switch",
    "label": "Film",
  },
  {
    "default": 0.35,
    "group": "Film",
    "hint": "How strong the scanlines are",
    "key": "post.filmIntensity",
    "kind": "slider",
    "label": "Intensity",
    "max": 1,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.film",
    },
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Halftone",
    "key": "post.halftone",
    "kind": "switch",
    "label": "Halftone",
  },
  {
    "default": 4,
    "group": "Halftone",
    "hint": "Size of the print dots",
    "key": "post.halftoneRadius",
    "kind": "slider",
    "label": "Radius",
    "max": 20,
    "min": 1,
    "showIf": {
      "equals": true,
      "key": "post.halftone",
    },
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Dot screen",
    "key": "post.dotScreen",
    "kind": "switch",
    "label": "Dot screen",
  },
  {
    "default": 1,
    "group": "Dot screen",
    "hint": "Size of the dot pattern",
    "key": "post.dotScreenScale",
    "kind": "slider",
    "label": "Scale",
    "max": 4,
    "min": 0.2,
    "showIf": {
      "equals": true,
      "key": "post.dotScreen",
    },
    "step": 0.1,
  },
  {
    "default": 1.57,
    "group": "Dot screen",
    "hint": "Rotates the dot grid",
    "key": "post.dotScreenAngle",
    "kind": "slider",
    "label": "Angle",
    "max": 3.14,
    "min": -3.14,
    "showIf": {
      "equals": true,
      "key": "post.dotScreen",
    },
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Glitch",
    "key": "post.glitch",
    "kind": "switch",
    "label": "Glitch",
  },
  {
    "default": false,
    "group": "Grain",
    "key": "post.grain",
    "kind": "switch",
    "label": "Grain",
  },
  {
    "default": 0.25,
    "group": "Grain",
    "hint": "How strong the grain is",
    "key": "post.grainAmount",
    "kind": "slider",
    "label": "Amount",
    "max": 1,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.grain",
    },
    "step": 0.02,
  },
  {
    "default": 2,
    "group": "Grain",
    "hint": "How coarse the grain is",
    "key": "post.grainSize",
    "kind": "slider",
    "label": "Size",
    "max": 8,
    "min": 1,
    "showIf": {
      "equals": true,
      "key": "post.grain",
    },
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Vignette",
    "key": "post.vignette",
    "kind": "switch",
    "label": "Vignette",
  },
  {
    "default": 0.4,
    "group": "Vignette",
    "hint": "How dark the corners get",
    "key": "post.vignetteAmount",
    "kind": "slider",
    "label": "Amount",
    "max": 1,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.vignette",
    },
    "step": 0.02,
  },
  {
    "default": 0.6,
    "group": "Vignette",
    "hint": "How far in the vignette starts to darken",
    "key": "post.vignetteRadius",
    "kind": "slider",
    "label": "Radius",
    "max": 1.4,
    "min": 0.3,
    "showIf": {
      "equals": true,
      "key": "post.vignette",
    },
    "step": 0.02,
  },
  {
    "default": 0.5,
    "group": "Vignette",
    "hint": "How gradual the vignette's edge is",
    "key": "post.vignetteSoftness",
    "kind": "slider",
    "label": "Softness",
    "max": 0.8,
    "min": 0.05,
    "showIf": {
      "equals": true,
      "key": "post.vignette",
    },
    "step": 0.02,
  },
]
`;

exports[`shapeAgentControls > is a characterization snapshot for both fill modes 2`] = `
[
  {
    "default": "facets",
    "group": "Form",
    "hint": "facets = per-face colours from the palette; surface = one tiled fill over the whole solid",
    "key": "fillMode",
    "kind": "select",
    "label": "Fill mode",
    "options": [
      "facets",
      "surface",
    ],
  },
  {
    "default": "primitive",
    "group": "Shape",
    "key": "shape.mode",
    "kind": "select",
    "label": "Mode",
    "options": [
      "primitive",
      "gem",
    ],
  },
  {
    "default": "cube",
    "group": "Shape",
    "key": "shape.primitive",
    "kind": "select",
    "label": "Primitive",
    "options": [
      "cube",
      "sphere",
      "cone",
      "cylinder",
      "prism",
      "torus",
      "icosahedron",
      "octahedron",
    ],
  },
  {
    "default": 1,
    "group": "Shape",
    "key": "shape.density",
    "kind": "slider",
    "label": "Density",
    "max": 4,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Shape",
    "key": "shape.jitter",
    "kind": "slider",
    "label": "Jitter",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 1,
    "group": "Shape",
    "key": "shape.scale",
    "kind": "slider",
    "label": "Scale",
    "max": 3,
    "min": 0.25,
    "step": 0.05,
  },
  {
    "default": "orthographic",
    "group": "Shape",
    "key": "shape.projection",
    "kind": "select",
    "label": "Projection",
    "options": [
      "orthographic",
      "perspective",
    ],
  },
  {
    "default": "gradient",
    "group": "Fill",
    "key": "fill.type",
    "kind": "select",
    "label": "Fill type",
    "options": [
      "solid",
      "gradient",
      "ombre",
      "grid",
      "noise",
      "checkerboard",
      "stripes",
      "qr",
      "shader",
    ],
  },
  {
    "default": "#ff4da6",
    "group": "Fill",
    "key": "fill.a",
    "kind": "color",
    "label": "Color 1",
  },
  {
    "default": "#6a3df0",
    "group": "Fill",
    "key": "fill.b",
    "kind": "color",
    "label": "Color 2",
  },
  {
    "default": 0,
    "group": "Style",
    "key": "style.distortion",
    "kind": "slider",
    "label": "Distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "#000000",
    "group": "Style",
    "key": "style.background",
    "kind": "color",
    "label": "Background",
  },
  {
    "default": false,
    "group": "Bloom",
    "key": "post.bloom",
    "kind": "switch",
    "label": "Bloom",
  },
  {
    "default": 0.6,
    "group": "Bloom",
    "hint": "How strong the glow is",
    "key": "post.bloomStrength",
    "kind": "slider",
    "label": "Strength",
    "max": 3,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.bloom",
    },
    "step": 0.05,
  },
  {
    "default": 0.4,
    "group": "Bloom",
    "hint": "How far the glow spreads",
    "key": "post.bloomRadius",
    "kind": "slider",
    "label": "Radius",
    "max": 1,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.bloom",
    },
    "step": 0.05,
  },
  {
    "default": 0.8,
    "group": "Bloom",
    "hint": "How bright a pixel must be before it blooms",
    "key": "post.bloomThreshold",
    "kind": "slider",
    "label": "Threshold",
    "max": 1,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.bloom",
    },
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Color",
    "key": "post.color",
    "kind": "switch",
    "label": "Color",
  },
  {
    "default": 1,
    "group": "Color",
    "hint": "Overall brightness",
    "key": "post.exposure",
    "kind": "slider",
    "label": "Exposure",
    "max": 2,
    "min": 0.2,
    "showIf": {
      "equals": true,
      "key": "post.color",
    },
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Color",
    "hint": "Difference between darks and lights",
    "key": "post.contrast",
    "kind": "slider",
    "label": "Contrast",
    "max": 2,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.color",
    },
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Color",
    "hint": "How vivid the colours are",
    "key": "post.saturation",
    "kind": "slider",
    "label": "Saturation",
    "max": 2,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.color",
    },
    "step": 0.05,
  },
  {
    "default": 0,
    "group": "Color",
    "hint": "Rotates every colour around the wheel",
    "key": "post.hue",
    "kind": "slider",
    "label": "Hue",
    "max": 3.14,
    "min": -3.14,
    "showIf": {
      "equals": true,
      "key": "post.color",
    },
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Duotone",
    "key": "post.duotone",
    "kind": "switch",
    "label": "Duotone",
  },
  {
    "default": "#1a1a2e",
    "group": "Duotone",
    "hint": "Colour the darkest tones become",
    "key": "post.duotoneShadow",
    "kind": "color",
    "label": "Shadow",
    "showIf": {
      "equals": true,
      "key": "post.duotone",
    },
  },
  {
    "default": "#f5f0e8",
    "group": "Duotone",
    "hint": "Colour the brightest tones become",
    "key": "post.duotoneHighlight",
    "kind": "color",
    "label": "Highlight",
    "showIf": {
      "equals": true,
      "key": "post.duotone",
    },
  },
  {
    "default": 1,
    "group": "Duotone",
    "hint": "How much of the duotone shows through",
    "key": "post.duotoneMix",
    "kind": "slider",
    "label": "Mix",
    "max": 1,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.duotone",
    },
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Chroma",
    "key": "post.chroma",
    "kind": "switch",
    "label": "Chroma",
  },
  {
    "default": 0.25,
    "group": "Chroma",
    "hint": "Colour fringing at the edges",
    "key": "post.chromaAmount",
    "kind": "slider",
    "label": "Amount",
    "max": 1.5,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.chroma",
    },
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Blur",
    "key": "post.blur",
    "kind": "switch",
    "label": "Blur",
  },
  {
    "default": 0.01,
    "group": "Blur",
    "hint": "Soft bokeh-style blur",
    "key": "post.blurAmount",
    "kind": "slider",
    "label": "Amount",
    "max": 0.04,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.blur",
    },
    "step": 0.002,
  },
  {
    "default": false,
    "group": "Film",
    "key": "post.film",
    "kind": "switch",
    "label": "Film",
  },
  {
    "default": 0.35,
    "group": "Film",
    "hint": "How strong the scanlines are",
    "key": "post.filmIntensity",
    "kind": "slider",
    "label": "Intensity",
    "max": 1,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.film",
    },
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Halftone",
    "key": "post.halftone",
    "kind": "switch",
    "label": "Halftone",
  },
  {
    "default": 4,
    "group": "Halftone",
    "hint": "Size of the print dots",
    "key": "post.halftoneRadius",
    "kind": "slider",
    "label": "Radius",
    "max": 20,
    "min": 1,
    "showIf": {
      "equals": true,
      "key": "post.halftone",
    },
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Dot screen",
    "key": "post.dotScreen",
    "kind": "switch",
    "label": "Dot screen",
  },
  {
    "default": 1,
    "group": "Dot screen",
    "hint": "Size of the dot pattern",
    "key": "post.dotScreenScale",
    "kind": "slider",
    "label": "Scale",
    "max": 4,
    "min": 0.2,
    "showIf": {
      "equals": true,
      "key": "post.dotScreen",
    },
    "step": 0.1,
  },
  {
    "default": 1.57,
    "group": "Dot screen",
    "hint": "Rotates the dot grid",
    "key": "post.dotScreenAngle",
    "kind": "slider",
    "label": "Angle",
    "max": 3.14,
    "min": -3.14,
    "showIf": {
      "equals": true,
      "key": "post.dotScreen",
    },
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Glitch",
    "key": "post.glitch",
    "kind": "switch",
    "label": "Glitch",
  },
  {
    "default": false,
    "group": "Grain",
    "key": "post.grain",
    "kind": "switch",
    "label": "Grain",
  },
  {
    "default": 0.25,
    "group": "Grain",
    "hint": "How strong the grain is",
    "key": "post.grainAmount",
    "kind": "slider",
    "label": "Amount",
    "max": 1,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.grain",
    },
    "step": 0.02,
  },
  {
    "default": 2,
    "group": "Grain",
    "hint": "How coarse the grain is",
    "key": "post.grainSize",
    "kind": "slider",
    "label": "Size",
    "max": 8,
    "min": 1,
    "showIf": {
      "equals": true,
      "key": "post.grain",
    },
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Vignette",
    "key": "post.vignette",
    "kind": "switch",
    "label": "Vignette",
  },
  {
    "default": 0.4,
    "group": "Vignette",
    "hint": "How dark the corners get",
    "key": "post.vignetteAmount",
    "kind": "slider",
    "label": "Amount",
    "max": 1,
    "min": 0,
    "showIf": {
      "equals": true,
      "key": "post.vignette",
    },
    "step": 0.02,
  },
  {
    "default": 0.6,
    "group": "Vignette",
    "hint": "How far in the vignette starts to darken",
    "key": "post.vignetteRadius",
    "kind": "slider",
    "label": "Radius",
    "max": 1.4,
    "min": 0.3,
    "showIf": {
      "equals": true,
      "key": "post.vignette",
    },
    "step": 0.02,
  },
  {
    "default": 0.5,
    "group": "Vignette",
    "hint": "How gradual the vignette's edge is",
    "key": "post.vignetteSoftness",
    "kind": "slider",
    "label": "Softness",
    "max": 0.8,
    "min": 0.05,
    "showIf": {
      "equals": true,
      "key": "post.vignette",
    },
    "step": 0.02,
  },
]
`;
